--- a/部署文档交付.md
+++ b/部署文档交付.md
@@ -5,12 +5,14 @@ by weirros@263.net 20221019
 #### step1 安装Debian11   
 设置用户名密码
 root
-loop900800700
+password
 开启远程登陆ssh
 远程登录
 #### step2 安装宝塔面板
 ```
 wget -O install.sh http://download.bt.cn/install/install-ubuntu_6.0.sh && bash install.sh 12f2c1d72
+```
+
 ```
 安装宝塔面板，
 外网面板地址: http://[240e:389:6d07:2b00:20c:29ff:fe58:cbed]:8888/d3c88a08
@@ -40,9 +42,11 @@ username: ybfmvvri
 password: c0375215
 If you cannot access the panel,
 release the following panel port [8888] in the security group
+```
 ==若无法访问面板，请检查防火墙/安全组是否有放行面板[8888]端口==
 
-root@debian:/www/server/panel# bt
+```
+root@debian:/www/server/panel#bt
 ===============宝塔面板命令行==================
 (1) 重启面板服务           (8) 改面板端口
 (2) 停止面板服务           (9) 清除面板缓存
@@ -61,10 +65,10 @@ root@debian:/www/server/panel# bt
 ===============================================
 正在执行(5)...
 ===============================================
-请输入新的面板密码：loop900800700
+请输入新的面板密码：password
 |-用户名: rootadmin
-|-新密码: loop900800700
-
+|-新密码: password
+```
 绑定一个账号，建议新注册一个；实际使用问题不大；
 
 Time consumed: 22 Minute!
