--- a/部署文档交付.md
+++ b/部署文档交付.md
@@ -142,6 +142,8 @@ python3 manage.py runserver 0.0.0.0:8000 --insecure #加参数解决拒绝静态
 uwsgi --http 0.0.0.0:8000/ --file villageBigScreen_server/wsgi.py --static-map=/static=static
 # 端口切换
 #uwsgi --http 0.0.0.0:80/ --file villageBigScreen_server/wsgi.py --static-map=/static=static
+# 解决数据包太大报错，提高缓存容量
+#uwsgi --http 0.0.0.0:8000/ --file villageBigScreen_server/wsgi.py --static-map=/static=static --buffer-size 32768
 ```
 
 
